<resources>
    <string name="app_name">Chatty</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="create_account">Create Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Sign Up</string>
    <string name="hey_there">Hey there...!</string>
    <string name="sign_in">Sign In</string>
    <string name="me">Me</string>
    <string name="logintext">Login</string>
    <string name="create_new_account_here">Create new Account here</string>
    <string name="need_new_account_sign_up_here">New Account?</string>

    <!-- TODO: Remove or change this placeholder border -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="hey_there_i_m_using_this_app">Hey there!...I\'m using this App</string>
    <string name="edit_status">Edit Status</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="enter_status">Enter status</string>
    <string name="post_status">Post Status</string>
    <string name="default_status">Default Status</string>
    <string name="display_name_">Display Name.</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="friends">Friends</string>
    <string name="users_status">Users status</string>
    <string name="display_name__">Display Name</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="type_message">Type Message ...</string>
    <string name="decline">Decline</string>


    <!--setting item-->
    <string name="user_account_settings">Your Account</string>
    <string name="user_notification_settings">Notification</string>
    <string name="user_chat_settings">Chat Settings</string>
    <string name="user_help_settings">Help</string>
</resources>
