<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.breezil.chatty.Activity.LoginActivity">
    <include layout="@layout/chatty_app_bar" android:id="@+id/loginToolbar"/>

    <EditText
        android:id="@+id/loginEmailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginToolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPasswordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/loginEmailtext"
        android:layout_below="@+id/loginEmailtext"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password" />

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPasswordtext"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/logintext"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:layout_below="@+id/loginToolbar"
        android:layout_alignStart="@+id/loginPasswordtext" />

    <TextView
        android:id="@+id/gotoSignuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/need_new_account_sign_up_here"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"/>


</RelativeLayout>
