<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.breezil.chatty.Activity.StartActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_there"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/start_regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/colorWhite"/>

    <Button
        android:id="@+id/start_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/start_regBtn"
        android:layout_below="@+id/start_regBtn"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccent"/>

</RelativeLayout>
