<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.breezil.chatty.Activity.RegisterActivity"
    android:background="@drawable/chat_image_two">


    <EditText
        android:id="@+id/regUsernametext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/regEmailtext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="center"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:background="@drawable/white_text_background"
        />

    <EditText
        android:id="@+id/regEmailtext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/regPasswordtext"
        android:layout_alignEnd="@+id/regUsernametext"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/white_text_background"/>

    <EditText
        android:id="@+id/regPasswordtext"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_above="@+id/regRegBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="@drawable/white_text_background"/>

    <Button
        android:id="@+id/regRegBtn"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        tools:layout_editor_absoluteY="343dp"
        android:layout_marginBottom="132dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_text_background"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/regUsernametext"
        android:layout_below="@+id/regToolBar"
        android:layout_marginStart="12dp"
        android:layout_marginTop="42dp"
        android:text="@string/create_a_new_account"
        android:textSize="30dp"
        android:textColor="@color/colorPrimaryDark"
        />
</RelativeLayout>
