<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_layer"
    android:textAlignment="center"
    tools:context="com.example.breezil.chatty.Activity.ui.SettupActivity">

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/settingImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_avatar"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/settingDisplayName"
        android:layout_alignStart="@+id/settingEditStatus"
        android:elevation="10dp"
        android:transitionName="imgtransition"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src=""
        android:elevation="15sp"
        android:id="@+id/changeImageIcon"
        android:layout_alignBottom="@+id/settingImage"
        android:layout_alignEnd="@+id/settingImage"
        />

    <TextView
        android:id="@+id/settingDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/display_name"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:layout_above="@+id/settingHeyMessge"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/settingHeyMessge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_there_i_m_using_this_app"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/settingEditStatus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/edit_status"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relLayoutButBar"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottomNavView_Bar"
            android:background="@drawable/greyborderbottom"
            app:menu="@menu/bottom_nav_menu"
            >

        </android.support.design.widget.BottomNavigationView>
    </RelativeLayout>


</RelativeLayout>
